@@ -1,5 +1,9 @@
 2002-08-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/beam-quanting.cc (score_stem_lengths): Revert oops.
+
+	* input/template/melody-chords.ly: New file.
+
 	* lily/beam.cc (least_squares): Fix asymmetry and scary float
 	comparison.
 
